{
    "name": "XRInputActions",
    "maps": [
        {
            "name": "New action map",
            "id": "dba9a268-e3c6-4ba2-92f8-32e6022c8fc7",
            "actions": [
                {
                    "name": "RightGrip",
                    "type": "Button",
                    "id": "01a303e1-bc59-41da-a500-3eb8decff0d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftGrip",
                    "type": "Button",
                    "id": "48517c00-8948-48bf-99f0-4a53ca95a6a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4dbc5ecb-df4d-48f4-9086-53ca1b3e7c0e",
                    "path": "<XRController>{LeftHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1dad871-1812-4297-a7a0-db0a4d0b952c",
                    "path": "<XRController>{RightHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}